// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`example strategies codegen stop-loss.json generates manifest and extensions 1`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

interface IPriceOracle {
    function latestRoundData()
        external
        view
        returns (uint80 roundId, int256 answer, uint256 startedAt, uint256 updatedAt, uint80 answeredInRound);

    function decimals() external view returns (uint8);
}

/// @title StopLossStrategy — generated by Limit Canvas
/// @notice Chainlink-consumer hardened price predicate (positive answer, complete round,
///         heartbeat freshness, decimals match) for LOP arbitraryStaticCall.
contract StopLossStrategy {
    error InvalidAnswer();
    error IncompleteRound(uint80 roundId, uint80 answeredInRound, uint256 updatedAt);
    error StaleAnswer(uint256 updatedAt, uint256 nowTs, uint256 staleAfter);
    error DecimalsMismatch(uint8 actual, uint8 expected);

    /// @notice Returns 1 when fresh and price condition passes; reverts on oracle integrity failure.
    function checkPrice(
        address oracle,
        uint256 threshold,
        bool directionAbove,
        uint256 staleAfter,
        uint8 expectedDecimals
    ) external view returns (uint256) {
        (uint80 roundId, int256 answer,, uint256 updatedAt, uint80 answeredInRound) =
            IPriceOracle(oracle).latestRoundData();
        if (answer <= 0) revert InvalidAnswer();
        if (updatedAt == 0 || answeredInRound < roundId) {
            revert IncompleteRound(roundId, answeredInRound, updatedAt);
        }
        if (block.timestamp > updatedAt && block.timestamp - updatedAt > staleAfter) {
            revert StaleAnswer(updatedAt, block.timestamp, staleAfter);
        }
        uint8 actualDecimals = IPriceOracle(oracle).decimals();
        if (actualDecimals != expectedDecimals) {
            revert DecimalsMismatch(actualDecimals, expectedDecimals);
        }
        uint256 price = uint256(answer);
        bool ok = directionAbove ? price > threshold : price < threshold;
        return ok ? 1 : 0;
    }
}
"
`;

exports[`example strategies codegen stop-loss.json generates manifest and extensions 2`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

import {Test} from "forge-std/Test.sol";

contract StopLossStrategyGeneratedGeneratedTest is Test {
    function test_placeholder() external pure {
        assert(true);
    }
}
"
`;

exports[`example strategies codegen stop-loss.json generates manifest and extensions 3`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

import {Script} from "forge-std/Script.sol";
import {console2} from "forge-std/console2.sol";

contract DeployStopLossStrategy is Script {
    function run() external {
        uint256 key = vm.envUint("DEPLOYER_KEY");
        vm.startBroadcast(key);
        // Deploy implementation — replace with actual constructor args from DSL
        console2.log("Deploy stop-loss — set DEPLOYER_KEY and RPC_URL");
        vm.stopBroadcast();
    }
}
"
`;

exports[`example strategies codegen gas-guard.json generates manifest and extensions 1`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

/// @title GasGuardStrategy — generated by Limit Canvas
/// @notice Fill only when block.basefee <= maxBaseFee (30 gwei cap in DSL)
contract GasGuardStrategy {
    function isAllowed(uint256 maxBaseFee) external view returns (bool) {
        return block.basefee <= maxBaseFee;
    }

    /// @notice LOP predicates expect uint256 (non-zero = pass)
    function isAllowedUint(uint256 maxBaseFee) external view returns (uint256) {
        return isAllowed(maxBaseFee) ? 1 : 0;
    }
}
"
`;

exports[`example strategies codegen gas-guard.json generates manifest and extensions 2`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

import {Test} from "forge-std/Test.sol";

contract GasGuardStrategyGeneratedGeneratedTest is Test {
    function test_placeholder() external pure {
        assert(true);
    }
}
"
`;

exports[`example strategies codegen gas-guard.json generates manifest and extensions 3`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

import {Script} from "forge-std/Script.sol";
import {console2} from "forge-std/console2.sol";

contract DeployGasGuardStrategy is Script {
    function run() external {
        uint256 key = vm.envUint("DEPLOYER_KEY");
        vm.startBroadcast(key);
        // Deploy implementation — replace with actual constructor args from DSL
        console2.log("Deploy gas-guard — set DEPLOYER_KEY and RPC_URL");
        vm.stopBroadcast();
    }
}
"
`;

exports[`example strategies codegen twap-slice.json generates manifest and extensions 1`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

interface IOrderMixin {
    struct Order {
        uint256 salt;
        address maker;
        address receiver;
        address makerAsset;
        address takerAsset;
        uint256 makingAmount;
        uint256 takingAmount;
        uint256 makerTraits;
    }
}

interface IAmountGetter {
    function getMakingAmount(
        IOrderMixin.Order calldata order,
        bytes calldata extension,
        bytes32 orderHash,
        address taker,
        uint256 takingAmount,
        uint256 remainingMakingAmount,
        bytes calldata extraData
    ) external view returns (uint256);

    function getTakingAmount(
        IOrderMixin.Order calldata order,
        bytes calldata extension,
        bytes32 orderHash,
        address taker,
        uint256 makingAmount,
        uint256 remainingMakingAmount,
        bytes calldata extraData
    ) external view returns (uint256);
}

/// @title TwapSliceGetter — generated by Limit Canvas
/// @notice Caps per-fill making amount for TWAP-style partial fills
contract TwapSliceGetter is IAmountGetter {
    uint256 public immutable totalAmount;
    uint256 public immutable sliceAmount;
    uint256 public immutable intervalSeconds;
    uint256 public immutable startTime;

    constructor(uint256 _total, uint256 _slice, uint256 _interval, uint256 _start) {
        totalAmount = _total;
        sliceAmount = _slice;
        intervalSeconds = _interval;
        startTime = _start;
    }

    function maxMakingAmountNow() public view returns (uint256) {
        if (block.timestamp < startTime) return 0;
        uint256 elapsed = block.timestamp - startTime;
        uint256 slices = elapsed / intervalSeconds + 1;
        uint256 allowed = slices * sliceAmount;
        if (allowed > totalAmount) allowed = totalAmount;
        return allowed;
    }

    error ExceedsTwapCappedAmount();

    function getMakingAmount(
        IOrderMixin.Order calldata order,
        bytes calldata /* extension */,
        bytes32 /* orderHash */,
        address /* taker */,
        uint256 takingAmount,
        uint256 remainingMakingAmount,
        bytes calldata /* extraData */
    ) external view override returns (uint256) {
        uint256 cap = maxMakingAmountNow();
        uint256 maxFill = cap > remainingMakingAmount ? remainingMakingAmount : cap;
        uint256 requestedMaking = (takingAmount * order.makingAmount) / order.takingAmount;
        if (requestedMaking > maxFill) revert ExceedsTwapCappedAmount();
        return requestedMaking;
    }

    function getTakingAmount(
        IOrderMixin.Order calldata order,
        bytes calldata /* extension */,
        bytes32 /* orderHash */,
        address /* taker */,
        uint256 makingAmount,
        uint256 remainingMakingAmount,
        bytes calldata /* extraData */
    ) external view override returns (uint256) {
        uint256 cap = maxMakingAmountNow();
        uint256 maxFill = cap > remainingMakingAmount ? remainingMakingAmount : cap;
        if (makingAmount > maxFill) revert ExceedsTwapCappedAmount();
        return (makingAmount * order.takingAmount + order.makingAmount - 1) / order.makingAmount;
    }
}
"
`;

exports[`example strategies codegen twap-slice.json generates manifest and extensions 2`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

import {Test} from "forge-std/Test.sol";

contract TwapSliceGetterGeneratedGeneratedTest is Test {
    function test_placeholder() external pure {
        assert(true);
    }
}
"
`;

exports[`example strategies codegen twap-slice.json generates manifest and extensions 3`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

import {Script} from "forge-std/Script.sol";
import {console2} from "forge-std/console2.sol";

contract DeployTwapSliceGetter is Script {
    function run() external {
        uint256 key = vm.envUint("DEPLOYER_KEY");
        vm.startBroadcast(key);
        // Deploy implementation — replace with actual constructor args from DSL
        console2.log("Deploy twap-slice — set DEPLOYER_KEY and RPC_URL");
        vm.stopBroadcast();
    }
}
"
`;

exports[`example strategies codegen dca-schedule.json generates manifest and extensions 1`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

/// @title DcaSeriesRegistry — generated by Limit Canvas
/// @notice On-chain metadata for DCA tranche series (orders signed off-chain)
contract DcaSeriesRegistry {
    event DcaSeriesRegistered(
        bytes32 indexed seriesKey,
        address indexed maker,
        uint256 tranches,
        uint256 amountPerTranche,
        uint256 intervalSeconds
    );

    struct Series {
        address maker;
        uint256 tranches;
        uint256 amountPerTranche;
        uint256 intervalSeconds;
    }

    mapping(bytes32 => Series) public series;

    function registerSeries(
        address maker,
        uint256 tranches,
        uint256 amountPerTranche,
        uint256 intervalSeconds,
        uint256 seriesId
    ) external returns (bytes32 key) {
        key = keccak256(abi.encode(maker, seriesId, block.chainid));
        series[key] = Series(maker, tranches, amountPerTranche, intervalSeconds);
        emit DcaSeriesRegistered(key, maker, tranches, amountPerTranche, intervalSeconds);
    }
}
"
`;

exports[`example strategies codegen dca-schedule.json generates manifest and extensions 2`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

import {Test} from "forge-std/Test.sol";

contract DcaSeriesRegistryGeneratedGeneratedTest is Test {
    function test_placeholder() external pure {
        assert(true);
    }
}
"
`;

exports[`example strategies codegen dca-schedule.json generates manifest and extensions 3`] = `
"// SPDX-License-Identifier: MIT
pragma solidity 0.8.23;

import {Script} from "forge-std/Script.sol";
import {console2} from "forge-std/console2.sol";

contract DeployDcaSeriesRegistry is Script {
    function run() external {
        uint256 key = vm.envUint("DEPLOYER_KEY");
        vm.startBroadcast(key);
        // Deploy implementation — replace with actual constructor args from DSL
        console2.log("Deploy dca-schedule — set DEPLOYER_KEY and RPC_URL");
        vm.stopBroadcast();
    }
}
"
`;
